1999-12-16  Ettore Perazzoli  <ettore@helixcode.com>

	* libgnomevfs-corba/gnome-vfs-slave-notify.c
	(impl_Notify_load_directory): Actually set the list in the
	`GnomeVFSAsyncDirectoryOpInfo' struct when creating it from
	scratch.

1999-12-15  Elliot Lee  <sopwith@redhat.com>

	* libgnomevfs*/*.c: Fix warnings.
	* configure.in: Add --with-default-backend=...

1999-12-15  Darin Adler  <darin@eazel.com>

        * libgnomevfs/gnome-vfs-method.c: (load_module):
          Changed "Loading module" message to a g_message, since we
          want to ignore it, and we don't want to ignore g_warnings.
        * libgnomevfs/gnome-vfs-process.c: (wake_up):
          Changed "Process died" message to a g_message, since we
          want to ignore it, and we don't want to ignore g_warnings.
          (gnome_vfs_process_new): Changed "Process died" message to
          a g_message, since we want to ignore it, and we don't want
          to ignore g_warnings.

1999-12-15 Elliot Lee <sopwith@redhat.com>
	* libgnomevfs/gnome-vfs-ops.c: Sanity check for an invalid URI.
	* libgnomevfs/gnome-vfs-ops.[ch]: Use char instead of gchar.
	* libgnomevfs-corba/gnome-vfs-slave-process.c: Use g_message instead
	  of the incorrect g_warning.
	
1999-12-15  Darin Adler  <darin@eazel.com>

        * libgnomevfs/gnome-vfs-async-ops.h
        * libgnomevfs/gnome-vfs-context.c
        * libgnomevfs/gnome-vfs-directory-list.c
        * libgnomevfs/gnome-vfs-directory-list.h
        * libgnomevfs/gnome-vfs-directory.c
        * libgnomevfs/gnome-vfs-directory.h
        * libgnomevfs/gnome-vfs-messages.c
        * libgnomevfs/gnome-vfs-ops.c
        * libgnomevfs/gnome-vfs-ops.h
        * libgnomevfs/gnome-vfs-private-ops.c
        * libgnomevfs/gnome-vfs-private-ops.h
        * libgnomevfs/gnome-vfs-utils.c
        * libgnomevfs/gnome-vfs-utils.h
        * libgnomevfs-corba/gnome-vfs-async-ops.c
        * libgnomevfs-corba/gnome-vfs-slave-notify.c
        * libgnomevfs-pthread/gnome-vfs-async-ops.c